Fixed all rubocop findings from pdk validate

--- a/.sync.yml
+++ b/.sync.yml
@@ -60,4 +60,4 @@ spec/spec_helper.rb:
   mock_with: ':rspec'
   coverage_report: true
   spec_overrides:
-    - 'add_custom_fact :archive_windir, "C:\\ProgramData\\staging"'
+    - "add_custom_fact :archive_windir, 'C:\\\\ProgramData\\\\staging'"
