--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,6 @@
 fixtures:
   forge_modules:
+    archive: "puppet/archive"
     stdlib: "puppetlabs/stdlib"
-    staging: "nanliu/staging"
   symlinks:
     cygwin: "#{source_dir}"
